# PlanOpticon

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_new.md  implementation.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-apple.txt  requirements-gpu.txt  requirements.txt  sitemap.xml  work_plan.md
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  release-binaries.yml
api/analyzers/: index.html
api/models/: index.html
api/providers/: index.html
architecture/overview/: index.html
architecture/pipeline/: index.html
architecture/providers/: index.html
cli-reference/: index.html
contributing/: index.html
docs/: CNAME  cli-reference.md  contributing.md  index.md
docs/api/: analyzers.md  models.md  providers.md
docs/architecture/: overview.md  pipeline.md  providers.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: batch.md  cloud-sources.md  output-formats.md  single-video.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/batch/: index.html
guide/cloud-sources/: index.html
guide/output-formats/: index.html
guide/single-video/: index.html
scripts/: setup.sh
search/: search_index.json
tests/: test_action_detector.py  test_agent.py  test_api_cache.py  test_audio_extractor.py  test_batch.py  test_cloud_sources.py  test_content_analyzer.py  test_diagram_analyzer.py  test_frame_extractor.py  test_graph_discovery.py  test_graph_query.py  test_graph_store.py  test_json_parsing.py  test_models.py  test_output_structure.py  test_pipeline.py  test_prompt_templates.py  test_providers.py  test_rendering.py
video_processor/: models.py  output_structure.py  pipeline.py
video_processor/agent/: __init__.py  orchestrator.py
video_processor/analyzers/: action_detector.py  content_analyzer.py  diagram_analyzer.py
video_processor/api/: __init__.py
video_processor/cli/: commands.py  output_formatter.py
video_processor/extractors/: __init__.py  audio_extractor.py  frame_extractor.py  text_extractor.py
video_processor/integrators/: graph_discovery.py  graph_query.py  graph_store.py  knowledge_graph.py  plan_generator.py
video_processor/providers/: __init__.py  anthropic_provider.py  base.py  discovery.py  gemini_provider.py  manager.py  ollama_provider.py  openai_provider.py  whisper_local.py
video_processor/sources/: __init__.py  base.py  dropbox_source.py  google_drive.py
video_processor/utils/: api_cache.py  export.py  json_parsing.py  prompt_templates.py  rendering.py  (+1 more)
